Bug 1909584 - Don't propagate clicks into synthetic image documents. r=farre

This seems to work and seems fairly straight-forward.

Differential Revision: https://phabricator.services.mozilla.com/D218689