dom/base/nsObjectLoadingContent.h
@@ -89,6 +89,8 @@ class nsObjectLoadingContent : public nsIStreamListener,
 
   bool IsRewrittenYoutubeEmbed() const { return mRewrittenYoutubeEmbed; }
 
+  bool IsSyntheticImageDocument() const;
+
   const mozilla::Maybe<mozilla::IntrinsicSize>& GetSubdocumentIntrinsicSize()
       const {
     return mSubdocumentIntrinsicSize;
@@ -452,8 +454,6 @@ class nsObjectLoadingContent : public nsIStreamListener,
   // comments for details), we change these to try to load HTML5 versions of
   // videos.
   bool mRewrittenYoutubeEmbed : 1;
-
-  bool mLoadingSyntheticDocument : 1;
 
   // The intrinsic size and aspect ratio from a child SVG document that
   // we should use.  These are only set when we are an <object> or <embed>
